--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.18.0",
     "next": "^15.5.2",
     "next-auth": "^4.24.11",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0"
@@ -29,6 +30,7 @@
     "@types/express": "^5.0.3",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20.19.11",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "autoprefixer": "^10.4.21",
