--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
     "mongoose": "^8.18.0",
     "next": "^15.5.2",
