main page and contactus
in contactus mail functionality integrated.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "resend": "^6.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
